# Microvisor-Demo-IoT-Device

./: CMakeLists.txt  Dockerfile  LICENSE.md  README.md  deploy  deploy.sh  docker-entrypoint.sh  env.list  prep-keys.sh
.github/workflows/: build.yml
App/: CMakeLists.txt  app_version.in  ht16k33-seg.c  ht16k33-seg.h  ht16k33.c  ht16k33.h  http.c  http.h  i2c.c  i2c.h  lis3dh.c  lis3dh.h  logging.c  logging.h  main.c  main.h  mcp9808.c  mcp9808.h  network.c  network.h  uart_logging.c  uart_logging.h
App_Code/: CMakeLists.txt  ht16k33.c  ht16k33.h  i2c.c  logging.c  logging.h  main.c  main.h  mcp9808.c  mcp9808.h
Config/: FreeRTOSConfig.h
